samples/_failures_safe/1761801214_7c0813_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d0ffd7f.c: In function ‘main’:
./samples/SAFE/__tmp_5d0ffd7f.c:149:9: error: expected expression at end of input
  149 |         *(decompressed.data +
      |         ^
./samples/SAFE/__tmp_5d0ffd7f.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d0ffd7f.c:149:9: error: expected declaration or statement at end of input
